src/styles/pages/_dashboard.scss
@import '../abstracts/variables';

.dashboard {
    display: flex;
    flex-direction: column;
    background-color: #fff;
    width: 100%;
    height: 100vh;
    &__editor {
        display: flex;
        height: 100%;
    }
}

